# test_task_ecom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  make_query.py  populate_db.py  pyproject.toml  ruff.toml
src/: db.json  main.py
src/api/v1/: router.py
src/api/v1/endpoints/: form.py
src/constants/: form.py
src/schemas/: field.py  form.py
src/services/: form.py
src/utilities/: validators.py
