[tool.poetry]
name = "form-checker"
version = "0.1.0"
description = ""
authors = ["Pavel Zubko <tyyrok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
tinydb = "^4.8.2"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
